# Arabica

./: .readthedocs.yaml  .travis.yml  LICENCE  LICENSE  README.md  Word cloud.rst  data_test.csv  descriptive_results_GOOD_2.csv  hello.py  paper.bib  paper.md  requirements.txt  requirements_TEST.txt  requirements_tests.txt  setup.py  stopwords_extended.py  test.py  tests.py  travis.yml
.circleci/: config.yml  main.yml
.github/: draft-pdf.txt  main.yml  paper.md
.github/workflows/: draft-pdf  draft-pdf.yml  main  main.yml  pdf_generator.yml  test_python38.yml
arabica/: __init__.py  arabica_freq.py  cappuccino.py  clean_ngram.py  coffee_break.py  group.py  preprocess.py  sentiment.py  stopwords.py
arabica-0.0.1/: LICENSE  pyproject.toml  setup.py
arabica-0.0.1/arabica.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
arabica-0.0.5/: README.md  pyproject.toml  setup.py
arabica-0.0.5/arabica/: arabica_freq.py  group.py
arabica-1.0.0/: __init__.py  arabica_freq.py  clean_ngram.py  clean_numbers.py  clean_tokens.py  preprocess.py  stopwords.py
arabica-1.0.1/: arabica_freq.py
arabica-1.0.2/: clean_ngram.py  preprocess.py  stopwords.py
docs/: Data structure and requirements.rst  Descriptive n-gram analysis.rst  README.md  Time-series n-gram analysis.rst  index.rst  paper.md  results.csv
paper joss/: paper.bib
paper-joss/: paper.bib
tests/: api.travis-ci.com_v3_job_611199795_log.txt  arabica_freq_unit_test.py  cappuccino_unit_test.pipy  cappuccino_unit_test.py  coffee_break_unit_test.py  data.csv  makefile.py  paper_graphs.py  requirements.txt  tests.py  travis.yml
(+33 files in other folders)
