
[project]
name = "arabica"
version = "0.0.5"
authors = [
  { name="Petr Korab", email="xpetrkorab@gmail.com" },
]
description = "A Python package for exploratory analysis of text data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PetrKorab/Arabica"
"Bug Tracker" = "https://github.com/PetrKorab/Arabica/issues"


